fix #1296 update java vm options