@@ -50,12 +50,15 @@ if NOT "%FESS_USE_IPV4%" == "" (
 set JAVA_OPTS=%JAVA_OPTS% -Djava.net.preferIPv4Stack=true
 )
 
-set JAVA_OPTS=%JAVA_OPTS% -XX:+UseParNewGC
+set JAVA_OPTS=%JAVA_OPTS% -Djna.nosys=true
+set JAVA_OPTS=%JAVA_OPTS% -Djdk.io.permissionsUseCanonicalPath=true
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseConcMarkSweepGC
 
 set JAVA_OPTS=%JAVA_OPTS% -XX:CMSInitiatingOccupancyFraction=75
 set JAVA_OPTS=%JAVA_OPTS% -XX:+UseCMSInitiatingOccupancyOnly
 
+set JAVA_OPTS=%JAVA_OPTS% -Dio.netty.noUnsafe=true
+set JAVA_OPTS=%JAVA_OPTS% -Dio.netty.noKeySetOptimization=true
 set JAVA_OPTS=%JAVA_OPTS% -Dio.netty.recycler.maxCapacityPerThread=0
 
 set JAVA_OPTS=%JAVA_OPTS% -Dlog4j.shutdownHookEnabled=false
